# small-molecule-drug-design-agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_FIX_GUIDE.md  Agent数量核对报告.md  CHEMISTRY_TOOLS_GPU_CHECK.md  CHEMPROP_STATUS.md  COMPLETE_CHANGELOG.md  COMPLETION_REPORT.md  DATA_EXPANSION_GUIDE.md  DELIVERY_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DOCKER_GPU_FIX_SUMMARY.md  DOCKER_INSTALLATION_GUIDE.md  DOCKER_READY_TO_INSTALL.md  Dockerfile  Docker工具检查指南.md  EVIDENCE_DRAWER_FIX.md  FILE_INDEX.md  FINAL_COMPLETION_REPORT.md  FINAL_DELIVERY_REPORT.md  FIXES_SUMMARY.md  FIXES_SUMMARY_FINAL.md  FRONTEND_FIXES_SUMMARY.md  GPU_FIX_DEPLOYMENT_GUIDE.md  GPU_VERIFICATION_GUIDE.md  GROUP_TASK_ASSIGNMENT_BRAF.md  PROJECT_COMPLETED.md  PROJECT_COMPLETE_SUMMARY.txt  PROJECT_COMPLETION_REPORT.md  README.md  SERVER_SETUP_GUIDE.md  SYSTEM_CHECK_REPORT.md  TOOLS_FIX_SUMMARY.md  TOOLS_QUICKSTART.md  ULTIMATE_COMPLETION_REPORT.md  check_docker_tools.bat  check_llm_integration.sh  config.yaml  docker-compose.yml  (+11 more)
configs/: README.md  filters.yaml  models.yaml  scoring.yaml  tools.yaml
database/: README.md  medagent_seed.sqlite
docker/: daemon.json
docs/: AIZYNTHFINDER_ADAPTER_BUILD.md  AUTOGROW4_ADAPTER_BUILD.md  CANDIDATE_ASSESSMENT_BUILD.md  CANDIDATE_RANKING_BUILD.md  CHEMPROP_ADAPTER_BUILD.md  COMPUTE_TOOLS_INTEGRATION_SUMMARY.md  CORE_TOOLS_COMPLETION.md  DECISION_CARD_BUILD.md  DIFFDOCK_ADAPTER_BUILD.md  DOCKING_ADAPTER_BUILD.md  FILE_INGESTION_BUILD.md  MIGRATION_GUIDE.md  MOLECULE_GENERATION_BUILD.md  MOLECULE_IMPORT_BUILD.md  MOLECULE_VALIDATION_BUILD.md  RAG_BUILD.md  (+11 more)
(+306 files in other folders)
